--- a/Todo_List/templates/add_category.html
+++ b/Todo_List/templates/add_category.html
@@ -7,33 +7,42 @@
     <title>ADD CATEGORY - TODO LIST</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'add.png' %}">
 </head>
 <body>
     {% include 'base.html' %}
 <div class="container my-3">
     <h3 class="text-center">Add Category</h3>
-    <form method="POST" action="/add-category/">
-        {% csrf_token %}
-        <div class="mb-3">
-            <label for="category" class="form-label">Category Name :</label>
-            <input type="text" class="form-control" id="category" name="name" placeholder="EX : HOME" required>
-        </div>
-        <button type="submit" class="btn btn-primary btn-add">Add</button>
-    </form>
-    {% if messages %}
-        {% for message in messages %}
-            {% if message.tags == 'error' %}
-                <div class="alert alert-danger mt-3 text-center" role="alert"text-center>
-                    {{ message }}
+    <div class="d-flex justify-content-center">
+        <div style="width: 800px;">
+            <form method="POST" action="/add-category/">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="category" class="form-label">Category Name :</label>
+                    <input type="text" class="form-control" id="category" name="name" placeholder="EX : HOME" required>
                 </div>
+                <button type="submit" class="btn btn-primary btn-add">Add</button>
+            </form>
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'error' %}
+                    <br><br>
+                    <div class="alert alert-danger alert-dismissible mt-3 text-center" role="alert" style="width: 800px;">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endif %}
+                    {% if message.tags == 'success' %}
+                    <br><br>
+                    <div class="alert alert-success alert-dismissible mt-3 text-center" role="alert" text-center style="width:800px;">
+                        Category created successfully! Lets <a href="{% url 'Todo_List_App' %}" class="alert-link"style="color:green;"> Create a Task</a>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endif %}
+                {% endfor %}
             {% endif %}
-            {% if message.tags == 'success' %}
-            <div class="alert alert-success mt-3 text-center" role="alert" text-center>
-                Category created successfully! Lets <a href="{% url 'Todo_List_App' %}" class="alert-link"style="color:green;"> Create a Task</a>
-            </div>
-            {% endif %}
-        {% endfor %}
-    {% endif %}
+        </div>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
