--- a/Todo_List/templates/all_categories.html
+++ b/Todo_List/templates/all_categories.html
@@ -7,9 +7,10 @@
     <title>ALL CATEGORY - TODO LIST</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'running.png' %}">
 </head>
 <body>
-    {% include 'base.html' %}
+{% include 'base.html' %}
 <div class="container my-3">
     <div class="heading-container">
         <h3 class="text-center">All Categories</h3><br>
@@ -60,7 +61,7 @@
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="taskModal{{ task.id }}">{{ task.taskTitle }}</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter:invert(0.30);"></button>
                                         </div>
                                         <div class="modal-body text-start">
                                             <div class="row">
@@ -95,7 +96,7 @@
                             </div>
                             {% empty %}
                             <tr>
-                                <td colspan="5"align="center"><h5>No tasks available for this category.</h5></td>
+                                <td colspan="5"align="center">No tasks available for this category.</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -105,9 +106,10 @@
         </div>
         {% endfor %}
         {% if no_categories %}
-        <div class="alert alert-info mt-3" role="alert">
-            No categories available. Create a category to proceed.
-        </div>
+            <div class="alert alert-success alert-dismissible mt-3 text-center" role="alert" style="width: 800px; margin: 0 auto;">
+                No categories available, create a <a href="{% url 'add_category' %}" class="alert-link linked" style="text-decoration: none;">Category</a> to proceed.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
         {% endif %}
     </div>
 </div>
