--- a/Todo_List/templates/completed.html
+++ b/Todo_List/templates/completed.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TASK - TODO LIST</title>
+    <title>Completed Task - TODO LIST</title>
+    <link rel="icon" type="image/png" href="{% static 'completed.png' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
@@ -62,15 +63,14 @@
             </form>
         </div>
     </div>
-    {% if messages %}
+    {% for message in messages %}
     <div class="text-center mt-3">
-        <div class="alert alert-success" role="alert">
-            {% for message in messages %}
-                <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
-            {% endfor %}
+        <div class="alert alert-success alert-dismissible" role="alert" style="width: 800px; margin: 0 auto;">
+            <h6>{{ message }}</h6>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
-    {% endif %}
+    {% endfor %}
     {% if completed_tasks %}
     <table class="table table-hover"border = "1">
         <thead>
@@ -96,7 +96,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="taskModal{{ task.id }}">{{ task.taskTitle }}</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter:invert(0.30);"></button>
                         </div>
                         <div class="modal-body text-start">
                             <div class="row">
