--- a/Todo_List/templates/index.html
+++ b/Todo_List/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HOME - TODO LIST</title>
+    <link rel="icon" type="image/png" href="{% static 'download.png' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
@@ -12,10 +13,16 @@
     {% include 'base.html' %}
     <div class="container my-3">
         <h3 class="text-center">Create a Task</h3>
-        <form method="POST" action="{% url 'Todo_List_App' %}">
-            {% csrf_token %}
-            <div class="d-flex justify-content-center">
-                <div style="width: 800px;">
+        <div class="d-flex justify-content-center">
+            <div style="width: 800px;">
+                {% if success %}
+                    <div class="alert alert-success alert-dismissible mt-3 text-center" role="alert" style="width: 800px; margin: 0 auto;">
+                        Task created successfully!
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endif %}
+                <form method="POST" action="{% url 'Todo_List_App' %}">
+                    {% csrf_token %}
                     <div class="mb-3">
                         <label for="title" class="form-label">Task Title</label>
                         <input type="text" class="form-control" id="title" name="title" required>
@@ -26,11 +33,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="due_date" class="form-label">Due Date</label>
-                        <input type="date" class="form-control icon-dark-mode" id="due_date" name="due_date" required>
+                        <input type="date" class="form-control icon-dark-mode" id="due_date" name="due_date" value="{{ cur_date }}" required>
                     </div>
                     <div class="mb-3">
                         <label for="dueTime" class="form-label">Due Time</label>
-                        <input type="time" class="form-control icon-dark-mode" id="dueTime" name="dueTime" value="{{ current_time_plus_one_hour }}" required>
+                        <input type="time" class="form-control icon-dark-mode" id="dueTime" name="dueTime" value="{{ cur_time }}" required>
                     </div>
                     <div class="mb-3">
                         <label for="category" class="form-label">Category</label>
@@ -46,22 +53,16 @@
                         <input type="checkbox"class="form-check-input" id="important"name="important">
                     </div>
                     <button type="submit" class="btn btn-primary btn-add{% if no_categories %} disabled{% endif %}" {% if no_categories %}disabled{% endif %}>Submit</button>
-                    {% if no_categories %}
-                    <div class="text-center mt-3">
-                        <div class="alert alert-danger" role="alert">
-                            You need to create a category first! <a href="{% url 'add_category' %}" class="alert-link linked"> Add Category</a>
-                        </div>
+                </form>
+                {% if no_categories %}
+                <div class="text-center mt-3">
+                    <div class="alert alert-danger" role="alert">
+                        You need to create a category first! <a href="{% url 'add_category' %}" class="alert-link linked"> Add Category</a>
                     </div>
-                    {% endif %}
                 </div>
+                {% endif %}
             </div>
-        </form>
-        
-        {% if success %}
-            <div class="alert alert-success mt-3 text-center" role="alert">
-                Task created successfully!
-            </div>
-        {% endif %}
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
