--- a/Todo_List/templates/tasks.html
+++ b/Todo_List/templates/tasks.html
@@ -7,6 +7,7 @@
     <title>TASK - TODO LIST</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'running.png' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -58,15 +59,14 @@
             </form>
         </div>
     </div>
-    {% if messages %}
+    {% for message in messages %}
     <div class="text-center mt-3">
-        <div class="alert alert-success" role="alert">
-            {% for message in messages %}
-                <h6><div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div></h6>
-            {% endfor %}
+        <div class="alert alert-success alert-dismissible" role="alert" style="width: 800px; margin: 0 auto;">
+            <h6>{{ message }}</h6>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
-    {% endif %}
+    {% endfor %}
     {% if tasks %}
         <table class="table table-hover" border="1">
             <thead>
@@ -118,7 +118,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="taskModal{{ task.id }}">{{ task.taskTitle }}</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter:invert(0.30);"></button>
                             </div>
                             
                             <div class="modal-body text-start">
